@@ -370,7 +370,7 @@ static int var_xml_generate(modsec_rec *msr, msre_var *var, msre_rule *rule,
     /* Process the XPath expression. */
 
     count = 0;
-    xpathExpr = var->param;
+    xpathExpr = (const xmlChar*)var->param;
 
     xpathCtx = xmlXPathNewContext(msr->xml->doc);
     if (xpathCtx == NULL) {
@@ -392,7 +392,7 @@ static int var_xml_generate(modsec_rec *msr, msre_var *var, msre_rule *rule,
             if (parse_name_eq_value(mptmp, action->param, &prefix, &href) < 0) return -1;
             if ((prefix == NULL)||(href == NULL)) return -1;
 
-            if(xmlXPathRegisterNs(xpathCtx, prefix, href) != 0) {
+            if(xmlXPathRegisterNs(xpathCtx, (const xmlChar*)prefix, (const xmlChar*)href) != 0) {
                 msr_log(msr, 1, "Failed to register XML namespace href \"%s\" prefix \"%s\".",
                     log_escape(mptmp, prefix), log_escape(mptmp, href));
                 return -1;
@@ -424,7 +424,7 @@ static int var_xml_generate(modsec_rec *msr, msre_var *var, msre_rule *rule,
         msre_var *rvar = NULL;
         char *content = NULL;
 
-        content = xmlNodeGetContent(nodes->nodeTab[i]);
+        content = (char *)xmlNodeGetContent(nodes->nodeTab[i]);
         if (content != NULL) {
             rvar = apr_pmemdup(mptmp, var, sizeof(msre_var));
             rvar->value = apr_pstrdup(mptmp, content);
